fixes logo alignment

--- a/app/components/ViewLayout/ViewLayout.scss
+++ b/app/components/ViewLayout/ViewLayout.scss
@@ -58,7 +58,8 @@
     width: 100%;
 
     .backButton {
-      margin-left: 20px;
+      position: absolute;
+      left: 330px;
     }
 
     img {
